--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -15,5 +15,5 @@ jobs:
         name: mycache
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix --experimental-features 'nix-command flakes' build .#default
+    - run: - run: nix --experimental-features 'nix-command flakes' build .#nixosConfigurations.nixos.config.system.build.toplevel
     - run: nix-shell --run "echo OK"
