--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -12,7 +12,7 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - uses: cachix/cachix-action@v16
       with:
-        name: mycache
+        name: aniviaflome
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix --experimental-features 'nix-command flakes' build .#nixosConfigurations.nixos.config.system.build.toplevel
