--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -1,4 +1,4 @@
-name: "Test"
+name: "Cachix"
 on:
   pull_request:
   push:
@@ -13,7 +13,6 @@ jobs:
     - uses: cachix/cachix-action@v16
       with:
         name: aniviaflome
-        # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix --experimental-features 'nix-command flakes' build .#nixosConfigurations.nixos.config.system.build.toplevel
     - run: nix-shell --run "echo OK"
