--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -24,8 +24,13 @@ jobs:
     - name: Build NixOS Image
       run: nix build .#nixosConfigurations.${{ env.LIVEISO }}.config.system.build.isoImage
 
+    - name: List result directory
+      run: ls -la result/
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: NixOS-${{ github.event.inputs.iso }}
-        path: result/sd-image
+        path: |
+          result/
+          !result/nix-support
