--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -6,13 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
-      with:
-        nix_path: nixpkgs=channel:nixos-unstable
-    - uses: cachix/cachix-action@v16
-      with:
-        name: aniviaflome
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix --experimental-features 'nix-command flakes' build .#nixosConfigurations.nixos.config.system.build.toplevel
-    - run: nix-shell --run "echo OK"
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v16
+        with:
+          name: aniviaflome
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+      - run: nix --experimental-features 'nix-command flakes' build .#nixosConfigurations.nixos.config.system.build.toplevel
+      - run: nix-shell --run "echo OK"
